--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,14 @@
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
+    "@devoto13/angular-fontawesome": "^0.5.0-5",
+    "@fortawesome/angular-fontawesome": "~0.5.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.21",
+    "@fortawesome/free-brands-svg-icons": "^5.10.2",
+    "@fortawesome/free-regular-svg-icons": "^5.10.2",
+    "@fortawesome/free-solid-svg-icons": "^5.10.2",
     "bootstrap": "4.1.1",
+    "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^5.6.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
