--- a/api/package.json
+++ b/api/package.json
@@ -34,7 +34,8 @@
     "knex": "^0.21.1",
     "mysql": "^2.18.1",
     "path": "^0.12.7",
-    "sqlite3": "^4.2.0"
+    "sqlite3": "^4.2.0",
+    "type": "module"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
