--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,9 @@
     "@fortawesome/free-brands-svg-icons": "^5.10.2",
     "@fortawesome/free-regular-svg-icons": "^5.10.2",
     "@fortawesome/free-solid-svg-icons": "^5.10.2",
+    "@ngx-loading-bar/core": "^4.2.0",
+    "@ngx-loading-bar/http-client": "^4.2.0",
+    "@ngx-loading-bar/router": "^4.2.0",
     "bootstrap": "4.1.1",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^5.6.1",
