password reset implemented

--- a/api/.env
+++ b/api/.env
@@ -1,1 +1,6 @@
 LOCAL_PORT = 4000
+HOST = 127.0.0.1
+USER = root
+PASSWORD = 
+DB = crypto_merchantile
+API_KEY = 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
